feat: apstrakcije za serializaciju su na *zavidnom nivou*, samo implementacija ne radi sasvim. Na osnovu testa SerializationTest, stvari se upisuju, ali nisam testirao citanje.